docs: update README

--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
     <script src="index.js"></script>
   </body>
 
-  <footer>Made By : Pushpendra Sharma</footer>
+  <footer>
+    Made By : Pushpendra Sharma <br>
+    <h6> </h6>
+  </footer>
+    
 </html>
